[package]
name = "esp32"
version = "0.1.0"
authors = ["chrysovalantis.psilos <chrysovalantis.psilos@student.kuleuven.be>", "pieter.awouters <pieter.awouters@student.kuleuven.be>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
embedded-svc = { version = "0.27.0", default-features = false }
anyhow = "1.0.79"
rgb = "0.8.2"
toml-cfg    = "0.2.0"
rand = "0.8.4"



[build-dependencies]
embuild = "0.31.3"
toml-cfg = "0.2.0"

